--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="styles.css" type="text/css" />
   </head>
   <body>
-
+      <h1>Cluck It Up!</h1>
     
-
+      <div id="chicken-cards"></div>
     
-    <script src="bundle.js"></script>
+      <script src="scripts/dbcalls.js"></script>
+      <script src="scripts/main.js"></script>
+      <script src="scripts/chicken.js"></script>
     <script src="http://localhost:35729/livereload.js"></script>
   </body>
 </html>
